--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.8</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 </project>
