--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+<!--        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>3.3.2.GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>-->
     </dependencies>
 
 </project>
