--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bladespear</groupId>
-    <artifactId>org_json_demo</artifactId>
+    <artifactId>JavaDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
